--- a/share/ashuramaru/discord/edit.css
+++ b/share/ashuramaru/discord/edit.css
@@ -6,19 +6,21 @@ TABLE OF CONTENTS
 	a. Wordmark hide
 	b. Custome text
 	c. Windows buttons swap
-	
-2. Colors
+2. Home icon
+3. Colors
 	a. Url colors
 	b. Channels icon color
 	c. Channels unread color
-	
-3. Fonts
+4. Fonts
 	a. Channels font
 	b. Chat font
 	c. Members font
 	d. Other font
-
-4. Home icon
+5. Chat
+	a. Textarea
+	b. Sidebar
+6. Scrollbars
+7. Update Notice
 
 ##################################################################################################### */
 
