--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -120,14 +120,9 @@ body {
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: var(--homeImage);
+    background-image: transparent;
     background-size: var(--homeImageSize);
     background-clip: border-box
-}
-
-.tutorialContainer-1pL9QS .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub,
-.tutorialContainer-1pL9QS .wrapper-3kah-n:hover .childWrapper-1j_1ub {
-    background-color: var(--color-main) !important;
 }
 
 .tutorialContainer-1pL9QS .childWrapper-1j_1ub > svg,
