--- a/share/discord/addons/BasicBackground-Chat.css
+++ b/share/discord/addons/BasicBackground-Chat.css
@@ -8,6 +8,9 @@
 	--color-link: #ff0000;
 	--color-mention: #ff0000;
 	
+	/* Font */
+	--font-chat: 'Exo 2', sans-serif;
+	
 	/* Chat Properties */
 	--transparencycolor: 0,0,0;
 	--transparencyalpha: 0.15;
