--- a/share/discord/addons/BasicBackground-Chat.css
+++ b/share/discord/addons/BasicBackground-Chat.css
@@ -9,7 +9,7 @@
 	--color-mention: #ff0000;
 	
 	/* Font */
-	--font-chat: 'Exo 2', sans-serif;
+	--font-chat: 'Roboto', sans-serif;
 	
 	/* Chat Properties */
 	--transparencycolor: 0,0,0;
