--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -51,6 +51,56 @@
 	--updatenotice: none;		
 }
 
+.theme-light, .theme-dark, .theme-amoled {
+	--text-positive: rgb(var(--color-success));
+	--text-warning: rgb(var(--color-warning));
+	--text-danger: rgb(var(--color-danger));
+	--info-positive-background: rgba(var(--color-success),.1);
+	--info-positive-foreground: rgb(var(--color-success));
+	--info-positive-text: #fff;
+	--info-warning-background: rgba(var(--color-warning),.1);
+	--info-warning-foreground: rgb(var(--color-warning));
+	--info-warning-text: #fff;
+	--info-danger-background: rgba(var(--color-danger),.1);
+	--info-danger-foreground: rgb(var(--color-danger));
+	--info-danger-text: #fff;
+	--status-positive: rgb(var(--color-success));
+	--status-positive-background: rgb(var(--color-success));
+	--status-positive-text: #fff;
+	--status-warning: rgb(var(--color-warning));
+	--status-warning-background: rgb(var(--color-warning));
+	--status-warning-text: #fff;
+	--status-danger: rgb(var(--color-danger));
+	--status-danger-background: rgb(var(--color-danger));
+	--status-danger-text: #fff;
+	--header-primary: rgb(var(--textbrightest));
+	--header-secondary: rgb(var(--textbright));
+	--text-normal: rgb(var(--textbrighter));
+	--text-muted: rgb(var(--textdarker));
+	--channels-default: rgb(var(--textdark));
+	--interactive-normal: rgb(var(--textbright));
+	--interactive-hover: rgb(var(--textbrighter));
+	--interactive-active: rgb(var(--textbrightest));
+	--interactive-muted: rgb(var(--textdarkest));
+	--logo-primary: rgb(var(--textbrightest));
+	--modal-background: rgba(var(--transparencycolor), .2);
+	--background-accent: rgba(var(--transparencycolor), .1);
+	--background-primary: rgba(var(--transparencycolor), .2);
+	--background-secondary: rgba(var(--transparencycolor), .3);
+	--background-secondary-alt: rgba(var(--transparencycolor), .35);
+	--background-tertiary: rgba(var(--transparencycolor), .4);
+	--background-floating: rgba(var(--transparencycolor), .5);
+	--background-mobile-primary: rgba(var(--transparencycolor), .2);
+	--background-mobile-secondary: rgba(var(--transparencycolor), .3);
+	--background-modifier-accent: rgba(var(--textbrightest),.1);
+	--background-message-automod: rgba(var(--color-danger),.05);
+	--background-message-automod-hover: rgba(var(--color-danger),.1);
+	--channeltextarea-background: rgba(var(--transparencycolor), .3);
+	--input-background: rgba(var(--transparencycolor), .1);
+	--elevation-low: 0 1px 5px 0 rgba(var(--transparencycolor), .3);
+	--elevation-high: 0 2px 10px 0 rgba(var(--transparencycolor), .3);
+}
+
 .appMount-2yBXZl,
 body {
     background-color: var(--backgroundColor) !important
