--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -46,6 +46,29 @@
 	--homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord/home-icon.svg');
 	--homeImageSize: 24px;
 	
+	/* Chat Properties */
+	--transparencycolor: 0,0,0;
+	--transparencyalpha: 0.15;
+	--messagetransparency: 0.5;
+	--usechatbubbles: calc(var(--messagetransparency) / (var(--messagetransparency) + 0.00000000000000000000001));
+	--guildchanneltransparency: 0.15;
+	--chatinputtransparency: 0.0;
+	--memberlisttransparency: 0.0;
+	--textshadow: transparent;
+	--textbrightest: 255,255,255;
+	--textbrighter: 222,222,222;
+	--textbright: 200,200,200;
+	--textdark: 160,160,160;
+	--textdarker: 125,125,125;
+	--textdarkest: 90,90,90;
+	--popoutposition: var(--backgroundPosition);
+	--popoutsize: var(--backgroundSize);
+	--popoutblur: var(--backgroundBlur);
+	--backdrop: rgba(0,0,0,0.85);
+	--backdropposition: center;
+	--backdropsize:	cover;
+	--backdropblur:	unset;
+	
 	/* Theme */
 	--theme-version: "1.1.1";
 	--updatenotice: none;		
