--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -67,7 +67,8 @@
 	
 	/* Theme */
 	--theme-version: "1.1.1";
-	--updatenotice: none;		
+	--updatenotice: none;
+	--shadow: rgba(0,0,0,.4);	
 }
 
 .theme-light, .theme-dark, .theme-amoled {
