--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -40,7 +40,7 @@
 	
 	/* Home Icon Properties */
 	--homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord/home-icon.svg');
-	--homeImageSize: 24px;
+	--homeImageSize: cover;
 	
 	/* Chat Properties */
 	--transparencycolor: 0,0,0;
@@ -184,20 +184,6 @@ body {
 .header-2o-2hj,
 .searchBar-3TnChZ {
     box-shadow: none !important
-}
-
-.tutorialContainer-1pL9QS .childWrapper-1j_1ub {
-    background-color: transparent;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: var(--homeImage);
-    background-size: var(--homeImageSize);
-    background-clip: border-box
-}
-
-.tutorialContainer-1pL9QS .childWrapper-1j_1ub > svg,
-.tutorialContainer-1pL9QS .childWrapper-1j_1ub .homeIcon-tEMBK1 {
-    display: none
 }
 
 ::-webkit-scrollbar {
